--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.14.1",
-    "@astrojs/mdx": "^0.16.0",
+    "@astrojs/mdx": "^1.1.0",
     "@astrojs/sitemap": "^1.0.1",
-    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/tailwind": "^5.0.0",
     "@fontsource/inter": "^4.5.15",
-    "astro": "^2.0.11",
+    "astro": "^3.1.1",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
     "astro-navbar": "^1.1.5",
     "astro-seo": "^0.7.0",
     "sanity": "^3.16.4",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "sharp": "^0.31.3"
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
