--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
     "astro-navbar": "^1.1.5",
-    "astro-seo": "^0.7.0",
+    "astro-portabletext": "^0.9.6",
     "astro-sanity": "^1.1.7",
+    "astro-seo": "^0.7.0",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.2.4"
   },
