--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astroship",
+  "name": "ethosphip",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -15,12 +15,14 @@
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@fontsource/inter": "^4.5.15",
+    "@sanity/astro": "^1.3.0",
+    "@sanity/client": "^6.4.12",
     "astro": "^3.1.1",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
     "astro-navbar": "^1.1.5",
     "astro-seo": "^0.7.0",
-    "sanity": "^3.16.4",
+    "astro-sanity": "^1.1.7",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.2.4"
   },
