--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/mdx": "^1.1.0",
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@fontsource/inter": "^4.5.15",
-    "@sanity/astro": "^1.3.0",
-    "@sanity/client": "^6.4.12",
+    "@types/alpinejs": "^3.0.0",
+    "alpinejs": "^3.0.0",
     "astro": "^3.1.1",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
