--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "astro": "^3.1.1",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
-    "astro-navbar": "^1.1.5",
+    "astro-navbar": "2.3.1",
     "astro-portabletext": "^0.9.6",
     "astro-seo": "^0.7.0",
     "sharp": "^0.32.6",
