--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.2.4",
-    "@astrojs/sitemap": "^3.1.2",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/mdx": "^3.1.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/tailwind": "^5.1.1",
     "@fontsource/inter": "^4.5.15",
-    "astro": "^4.5.17",
+    "astro": "^4.15.9",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
     "astro-navbar": "2.3.1",
     "astro-portabletext": "^0.9.6",
     "astro-seo": "^0.7.0",
+    "pnpm": "^9.11.0",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
